objects/SDOC__SD_Auth2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>SDOC__AT__c</fullName>
        <label>AT</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__RT__c</fullName>
        <label>RT</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__USR__c</fullName>
        <externalId>true</externalId>
        <label>USR</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__s3b__c</fullName>
        <label>s3b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__s3e__c</fullName>
        <label>s3e</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__s3k__c</fullName>
        <label>s3k</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__s3s__c</fullName>
        <label>s3s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SD Auth</label>
</CustomObject>